--- a/uiranger/index.html
+++ b/uiranger/index.html
@@ -289,6 +289,23 @@ $( function() {
   		return diffNowWeeks;
 	};
 
+	// Calc Diff weeks roundoff
+	function diffWeeksRoundoff(date1, date2) {
+  		var b = moment(date1),
+      		a = moment(date2),
+ 			diffNowWeeks = (a.diff(b, 'days'));
+ 			var quotient = Math.floor(diffNowWeeks/7);
+			var remainder = diffNowWeeks % 7;
+			console.log("test"+remainder);
+			if(remainder>0){
+				diffNowWeeks = quotient+1;
+			}
+			else{
+				diffNowWeeks = quotient;
+			}
+  		return diffNowWeeks;
+	};
+
 	
  
 	
@@ -327,8 +344,7 @@ $( function() {
 	$("#spendTime").html(getFormattedDateDiff(lmd, today)+" ("+spendPValue+"%)");
 	$("#dueTime").html(getFormattedDateDiff(today, bdd)+" ("+remainingPValue+"%)");
 
-
-	
+		
 	var tomorrowMoment, weeksCalc, arr=[], j = 1;
 	for(i=1;i<41;i++){
 		startMoment = moment(lmd).add(j, 'days');
@@ -354,9 +370,17 @@ $( function() {
 			trimesterClass = "first-trimester";
 		}
 
-		val = '<li class="list-group-item '+trimesterClass+'">'+resultnum+' Week - '+ val +"</li>";
+		val = '<li data-index="'+j+'" class="list-group-item '+trimesterClass+'">'+resultnum+' Week - '+ val +"</li>";
 		$("#weeksDetails").append(val);
 	});
+
+	$("[data-index].list-group-item").each(function(){
+		if($(this).attr("data-index")==diffWeeksRoundoff(lmd, today)){
+			$(this).addClass('active')
+		}
+	});
+
+
 
 
 	function ordinal_suffix_of(i) {
